# plAIground

./: .gitignore  CLAUDE.md  docker-compose.yml  gpu-requirements-report.md  pyrightconfig.json  requirements.md  specs.txt  tech_stack.md  user_stories.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  pyproject.toml  test_document_flow.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py  documents.py  export.py  health.py
backend/app/core/: config.py  database.py  document_processor.py  security.py
deployment/scripts/: SSH_TUNNEL_README.md  cleanup_session_containers.py  generate_password_hash.py  list_active_sessions.py  manage_session_containers.py  ollama_init.sh  provision_session.py  ssh_tunnel.py  tunnel.sh
deployment/sessions/: .gitkeep
docs/: DEVELOPMENT_SETUP.md  IMPLEMENTATION_STATUS.md  TECHNICAL_CONTEXT.md  tech_stack.md  user_stories.md
frontend/: .env.example  CLAUDE.md  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/[chatId]/: page.tsx
frontend/app/chat/history/: page.tsx
frontend/app/chat/new/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/chat/[chatId]/: page.tsx
frontend/app/dashboard/chat/history/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ProtectedRoute.tsx  SessionTimer.tsx  ThinkingIndicator.tsx
frontend/lib/: api.ts  auth-context.tsx  env.ts  hooks.ts  providers.tsx
frontend/lib/stores/: chat-store.ts
frontend/types/: index.ts
