[project]
name = "plAiground_backend"
version = "0.1.0"
description = "Legal AI Research Sandbox Backend - Secure ephemeral environment for legal AI research"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = []

[tool.uv]
# Ensure uv uses the venv in the project directory
managed = true
